[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = [
  "logfire (>=3,<4)",
  "opentelemetry-api (>=1.33,<2)",
  "opentelemetry-exporter-otlp (>=1.33,<2)",
  "opentelemetry-sdk (>=1.33,<2)",
  "pydantic (>=2,<3)",
]
description = ""
license = { text = "MIT" }
name = "anyot"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
